# basic_filter

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: bank.rs  filter_type.rs  lib.rs  parameters.rs  serde.rs
