[package]
name = "basic_filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.3"
vst = "0.4.0"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
real_time_fir_iir_filters = {version = "1.3.3", features = ["second_order"], default-features = false}
moddef = "0.2.6"

[lib]
name = "basic_filter"
crate-type = ["cdylib"]